# pyexplog

./: .gitignore  README.md  setup.cfg  setup.py
examples/: experiment_test.py  simple_test.py
pyexplog/: configuration.py  log.py  manager.py
tests/: routines.py  test_log.py  test_manager.py
