[metadata]
name = pyexplog
version = attr: pyexplog.VERSION
description = This is a package for logging experimental results in an H5 file.
long_description = file: README.rst
keywords = experiment log, logging
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
author = Michal Gregor

[options]
zip_safe = False
include_package_data = True
packages = find:
;scripts =
;  bin/first.py
;  bin/second.py

[options.package_data]
* = *.txt, *.rst
;hello = *.msg

;[options.extras_require]
;pdf = ReportLab>=1.2; RXP
;rest = docutils>=0.3; pack ==1.1, ==1.3

;[options.packages.find]
;exclude =
;    src.subpackage1
;    src.subpackage2

[aliases]
test=pytest # use pytest to run tests

[tool:pytest]
addopts = tests
